--- a/lesson3/09/index.html
+++ b/lesson3/09/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>こんなお悩みありませんか?</h2>
     <ul>
-        <li>x肩こりや頭痛がひどい</li>
+        <li>肩こりや頭痛がひどい</li>
         <li>手足が氷のように冷える</li>
         <li>寝ても疲れがとれない</li>
     </ul>
