--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -164,12 +164,29 @@
         </div>
         <div class="access-maparea">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.23103298668!2d139.7576272!3d35.6959319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c115d3f353b%3A0xbbe47de65abe4872!2z56We5L-d55S66aeF!5e0!3m2!1sja!2sjp!4v1718342298129!5m2!1sja!2sjp"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12961.207349463171!2d139.7516619671509!3d35.69418924985503!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c115d3f353b%3A0xbbe47de65abe4872!2z56We5L-d55S66aeF!5e0!3m2!1sja!2sjp!4v1718342114158!5m2!1sja!2sjp"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade" class="access-map"></iframe>
         </div>
     </section>
+    <div class="pagetop">
+        <a href="#mv">ページトップへ</a>
+    </div>
 
+    <footer class="foot-area">
+        <div class="inner">
+            <div class="logo-area foot-logo">
+                <img src="img/site-logo_w.svg" alt="rental space MdN">
+            </div>
+            <p class="txt-center">見学やセミナーのご相談など<br class="sp-only">お気軽にご連絡ください。</p>
+            <address class="text-phone">
+                TEL:<a href="tel:00-1234-5678">00-1234-5678</a>
+            </address>
+        </div>
+        <small class="foot-area_copy">
+            &copy; MdN Corporation.
+        </small>
+    </footer>
 </body>
 
 </html>
